[gd_scene load_steps=4 format=3 uid="uid://ckocjrsrqurep"]

[ext_resource type="Script" path="res://Entities/Player/Inventory/Equipment/Tools/ToolSlot.gd" id="1_ewxuh"]
[ext_resource type="Texture2D" uid="uid://6v3v0reidi10" path="res://Entities/Player/Inventory/Equipment/Tools/equipment_slot.png" id="2_f5oaf"]
[ext_resource type="PackedScene" uid="uid://b5ote6c6nj3y5" path="res://Entities/Player/Inventory/Stats Panel/StatsPanel.tscn" id="3_78ebc"]

[node name="Tool" type="AspectRatioContainer"]
texture_filter = 1
size_flags_horizontal = 3
script = ExtResource("1_ewxuh")

[node name="Slot" type="TextureRect" parent="."]
layout_mode = 2
mouse_filter = 2
texture = ExtResource("2_f5oaf")
stretch_mode = 5

[node name="Icon" type="AspectRatioContainer" parent="Slot"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.3
anchor_top = 0.3
anchor_right = 0.7
anchor_bottom = 0.7
offset_left = -8.0
offset_top = -8.0
offset_right = 8.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Icon" type="TextureRect" parent="Slot/Icon"]
layout_mode = 2
stretch_mode = 5

[node name="Stats" parent="Slot" instance=ExtResource("3_78ebc")]
visible = false
layout_mode = 1

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_enter"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exit"]
